--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="uk.ac.shef.oak.com4510.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:name="uk.ac.shef.oak.com4510.ui.history.HistoryFragment"
+        android:label="@string/title_history"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="uk.ac.shef.oak.com4510.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:name="uk.ac.shef.oak.com4510.ui.gallery.GalleryFragment"
+        android:label="@string/title_gallery"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
