--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gmm_white"
+        android:background="?attr/colorOnPrimary"
         app:itemIconTint="@drawable/bottom_navigation_selector"
         app:itemTextColor="@drawable/bottom_navigation_selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,5 +29,30 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="-80dp"
+        android:layout_marginTop="-150dp"
+        android:clickable="true"
+        app:layout_constraintStart_toEndOf="@+id/nav_host_fragment_activity_main"
+        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_main"
+        app:srcCompat="@drawable/maps_btn_myl_wear" />
+
+    <Switch
+        android:id="@+id/theme_switcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="-100dp"
+        android:minHeight="48dp"
+        android:text="Switch Theme"
+        app:layout_constraintBottom_toTopOf="@+id/nav_host_fragment_activity_main"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:checked="false" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
