--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="primaryDarkColor">#00766c</color>
     <color name="secondaryColor">#455a64</color>
     <color name="secondaryLightColor">#718792</color>
-    <color name="secondaryDarkColor">#1c313a</color>
+    <color name="secondaryDarkColor">#38464C</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#ffffff</color>
     <color name="green_200">#03dac6</color> <!--Color secondary-->
