--- a/app/src/main/res/drawable/btn_stop.xml
+++ b/app/src/main/res/drawable/btn_stop.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"
     >
 
-    <!-- 圆角的半径 -->
+    <!-- The radius of the rounded corner -->
     <corners android:radius="15dp" />
     <solid  android:color="#C53928"/>
 
