--- a/app/src/main/res/drawable/shape_white.xml
+++ b/app/src/main/res/drawable/shape_white.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"
     >
 
-    <!-- 圆角的半径 -->
+    <!-- The radius of the rounded corner -->
     <corners android:radius="100dp" />
     <solid  android:color="#ffffff"/>
 
