--- a/app/src/main/res/layout/recyclerview_title.xml
+++ b/app/src/main/res/layout/recyclerview_title.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="标题"/>
+        android:text="Title"/>
 </LinearLayout>
