--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,17 @@
     <style name="Widget.MyTheme.NavigationView" parent="Widget.MaterialComponents.NavigationView">
         <item name="itemTextAppearance">?attr/textAppearanceBody2</item>
     </style>
+
+    <!--    Setting the Dialog theme-->
+    <style name="RequestDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+    <!--    Set dialog to animate in and out-->
+    <style name="dialogWindowAnim" parent="android:Animation" mce_bogus="1">
+    <item name="android:windowEnterAnimation">@anim/dialog_enter_anim</item>
+    <item name="android:windowExitAnimation">@anim/dialog_exit_anim</item>
+    </style>
 </resources>
