--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/about"
-        android:title="@string/title_about" />
+        android:id="@+id/about" />
+        //android:title="@string/title_about"
+
 </menu>
