--- a/app/src/main/res/layout/map_activity.xml
+++ b/app/src/main/res/layout/map_activity.xml
@@ -6,72 +6,70 @@
     tools:context=".ui.map.MapActivity">
 
 
-
     <fragment
         android:id="@+id/fmap"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text=""
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textSize="28sp" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
+        android:layout_height="127dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="-1dp"
+        android:background="#A8FFFFFF"
         android:gravity="center_vertical"
-        android:layout_marginTop="30dp"
-        >
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="61dp"
+            android:layout_height="62dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/weather_icon" />
 
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/btn_normal"
-            android:layout_marginRight="2dp"
             android:layout_marginLeft="15dp"
-            />
+            android:layout_marginRight="2dp"
+            android:src="@drawable/time_icon" />
+
 
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:text="00:04" />
-
+            android:text="00:04"
+            android:textColor="@color/black" />
 
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginRight="5dp"
-            android:src="@drawable/btn_normal"
-            />
+            android:src="@drawable/temperature_icon" />
+
         <TextView
             android:id="@+id/tv_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:text="0.9℃"
-            android:layout_marginRight="5dp"/>
+            android:textColor="@color/black" />
+
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/btn_normal"
-            />
+            android:src="@drawable/barometer_icon" />
+
         <TextView
             android:id="@+id/tv_hPa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:text="1013.25hPa"
-            android:layout_marginRight="5dp" />
+            android:textColor="@color/black" />
+
         <Button
             android:id="@+id/btnStop"
             android:layout_width="60dp"
@@ -85,8 +83,20 @@
             tools:ignore="MissingConstraints" />
 
 
-
     </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="28sp" />
 
     <ImageView
         android:id="@+id/ivPosition"
