--- a/app/src/main/res/layout/map_activity.xml
+++ b/app/src/main/res/layout/map_activity.xml
@@ -113,13 +113,12 @@
         android:id="@+id/ivPhoto"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/photo"
-        android:layout_marginBottom="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:padding="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/shape_blue"
-        />
+        android:padding="10dp"
+        android:src="@drawable/photo" />
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="50dp"
